Bug 504090 - kmail crash with segfault at start when adding "folder size check" plugin
Summary: kmail crash with segfault at start when adding "folder size check" plugin
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.3.3
Platform: Manjaro Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-12 09:53 UTC by segcoredrakon
Modified: 2025-05-12 17:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
full backtrace of kmail with folder size check enable (119.56 KB, text/plain)
2025-05-12 09:53 UTC, segcoredrakon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description segcoredrakon 2025-05-12 09:53:03 UTC
Created attachment 181200 [details]
full backtrace of kmail with folder size check enable

SUMMARY
The KMail "Folder Size Check" plugin causes the application to crash with a segmentation fault when enabled. Kontact will also crash if it is installed.

STEPS TO REPRODUCE
1. Enable the "Folder Size Check" plugin in the KMail configuration.
2. Restart the application to apply the changes.
3. KMail crashes with a segmentation fault (visible in the console/logs).

OBSERVED RESULT
KMail and Kontact (if installed) crash with a segmentation fault when the plugin is enabled.

EXPECTED RESULT
KMail and Kontact should not crash when the "Folder Size Check" plugin is enabled.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro Linux
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0

ADDITIONAL INFORMATION
removing the plugin in the ~/.config/pimpluginsrc will make kmail application work again
Comment 1 Laurent Montel 2025-05-12 17:16:45 UTC
Git commit d6e6e3c27e99352b195cfe565627cc6d09ed0f84 by Laurent Montel.
Committed on 12/05/2025 at 17:16.
Pushed by mlaurent into branch 'release/25.04'.

Fix bug: kmail crash with segfault at start when adding "folder size check" plugin
(cherry picked from commit e7dfe2e354ab11d524970f4d58184f4349f66483)

M  +2    -2    kmail/plugins/checkfoldersizeaccount/checkfoldersizeaccountplugin.cpp

https://invent.kde.org/pim/kdepim-addons/-/commit/d6e6e3c27e99352b195cfe565627cc6d09ed0f84
Comment 2 Laurent Montel 2025-05-12 17:24:18 UTC
Git commit e7dfe2e354ab11d524970f4d58184f4349f66483 by Laurent Montel.
Committed on 12/05/2025 at 17:15.
Pushed by mlaurent into branch 'master'.

Fix bug: kmail crash with segfault at start when adding "folder size check" plugin

M  +2    -2    kmail/plugins/checkfoldersizeaccount/checkfoldersizeaccountplugin.cpp

https://invent.kde.org/pim/kdepim-addons/-/commit/e7dfe2e354ab11d524970f4d58184f4349f66483