Fix bug: kmail crash with segfault at start when adding "folder size check" plugin

BUG: 504090
(cherry picked from commit e7dfe2e354ab11d524970f4d58184f4349f66483)